--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reduxjs/toolkit": "^2.5.1",
-    "@tanstack/react-query": "^5.66.0",
-    "@tanstack/react-query-devtools": "^5.66.0",
+    "@tanstack/react-query": "^5.66.2",
+    "@tanstack/react-query-devtools": "^5.66.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "16.4.7",
     "ioredis": "5.5.0",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -33,22 +34,22 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.2.0",
     "@types/jest": "29.5.14",
     "@types/node": "^22.13.4",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
     "@types/react-redux": "^7.1.34",
     "@types/supertest": "6.0.2",
     "@types/uuid": "^10.0.0",
-    "eslint": "^9",
+    "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
     "jest": "29.7.0",
-    "postcss": "^8",
+    "postcss": "^8.5.2",
     "supertest": "7.0.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
