--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
@@ -19,13 +20,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "16.4.7",
+    "file-saver": "^2.0.5",
     "ioredis": "5.5.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "slugify": "^1.6.6",
     "tailwind-merge": "^3.0.1",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jest": "29.5.14",
     "@types/node": "^22.13.4",
     "@types/react": "^19.0.8",
