--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
@@ -23,30 +27,39 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.2",
     "@tanstack/react-query-devtools": "^5.66.2",
+    "bcryptjs": "^3.0.2",
+    "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "16.4.7",
     "file-saver": "^2.0.5",
+    "input": "^1.0.1",
     "ioredis": "5.5.0",
+    "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
     "next": "15.1.7",
+    "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.1",
+    "shadcn": "2.4.0-canary.14",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.5",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@prisma/client": "^6.5.0",
     "@types/file-saver": "^2.0.7",
     "@types/jest": "29.5.14",
     "@types/node": "^22.13.4",
@@ -59,6 +72,7 @@
     "eslint-config-next": "15.1.7",
     "jest": "29.7.0",
     "postcss": "^8.5.2",
+    "prisma": "^6.5.0",
     "supertest": "7.0.0",
     "tailwindcss": "^3.4.17",
     "ts-jest": "29.2.5",
