--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.66.2",
     "@tanstack/react-query-devtools": "^5.66.2",
+    "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^3.0.2",
     "card": "^2.5.4",
     "class-variance-authority": "^0.7.1",
